fix scrollbar styling not working on firefox

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -35,6 +35,10 @@ code {
 /*
     Scrollbar
 */
+@supports (-moz-appearance:none) {
+  :root { scrollbar-color: #2E282A #FFC914; }
+}
+
 ::-webkit-scrollbar {
   background: #FFC914;
 }
